# website

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/blocks/: base_block.rs  header.rs  mod.rs
src/routes/: contacts.rs  find_us.rs  index.rs  mod.rs  redirects.rs  trentino_api.rs
src/template_dir/: index.hbs
templates/: base.html  contact.html.hbs  contacts.html  find-us.html  find-us.html.hbs  graphics.html  header.html  home.html.hbs  index.html  index.html.hbs
templates/static/: busses.json  script.js  style.css
